--- a/package.json
+++ b/package.json
@@ -2,17 +2,27 @@
   "name": "challenge-desarrollador-7-11-23",
   "version": "1.0.0",
   "description": "challenge-w3",
-  "type": "module",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node index.ts",
+    "dev": "nodemon index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Daniel Palza",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.34.0",
+    "sequelize-cli": "^6.6.2",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@types/node": "^20.9.0",
+    "nodemon": "^3.0.1",
+    "typescript": "^5.2.2"
   }
 }
