--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "challenge-desarrollador-7-11-23",
   "version": "1.0.0",
   "description": "challenge-w3",
-  "main": "index.js",
+  "main": "./backend/index.js",
   "scripts": {
-    "start": "ts-node index.ts",
-    "dev": "nodemon index.ts",
-    "test": "mocha ./test/*.spec.ts"
+    "start": "ts-node ./backend/index.ts",
+    "dev": "nodemon ./backend/index.ts",
+    "test": "mocha ./backend/test/*.spec.ts"
   },
   "author": "Daniel Palza",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg": "^8.11.3",
