--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.16",
+    "@types/express": "^4.17.21",
     "@types/mocha": "^10.0.4",
     "@types/node": "^20.9.0",
     "chai": "^4.3.10",
